# takusen-oracle

./: .gitignore  LICENSE  Main.hs  Main.lhs  README.md  Setup.hs  Takusen.cabal  cabal.sandbox.config  lhs2hs.hs  stack.yaml  takusen-oracle.cabal
Control/Exception/: Extensible.hs  MonadIO.hs
Database/: Enumerator.hs  Enumerator.lhs  InternalEnumerator.hs  InternalEnumerator.lhs  Util.hs  Util.lhs
Database/MSSqlServer/: MSSqlFunctions.lhs
Database/MSSqlServer/Test/: Enumerator.lhs  MSSqlFunctions.lhs
Database/ODBC/: Enumerator.lhs  OdbcFunctions.hsc
Database/ODBC/Test/: Enumerator.lhs  OdbcFunctions.lhs
Database/Oracle/: Enumerator.hs  Enumerator.lhs  OCIConstants.hs  OCIConstants.lhs  OCIFunctions.hs  OCIFunctions.lhs
Database/Oracle/Test/: Enumerator.hs  Enumerator.lhs  OCIFunctions.hs  OCIFunctions.lhs
Database/PostgreSQL/: Enumerator.lhs  PGFunctions.lhs
Database/PostgreSQL/Test/: Enumerator.lhs  PGFunctions.lhs  pgaccess.hs
Database/Sqlite/: Enumerator.lhs  SqliteFunctions.lhs
Database/Sqlite/Test/: Enumerator.lhs  SqliteFunctions.lhs
Database/Stub/: Enumerator.lhs
Database/Stub/Test/: Enumerator.lhs
Database/Test/: Enumerator.hs  Enumerator.lhs  MultiConnect.hs  MultiConnect.lhs  Performance.hs  Performance.lhs  Util.hs
Example/: Main.hs  takusen-example.cabal
Foreign/C/: UTF8.hs
Foreign/C/Test/: UTF8.hs
Test/: Main.hs  MiniUnit.hs  MiniUnitTest.hs
