Name:           takusen-oracle
Version:        0.9.0
License:        BSD3
License-file:   LICENSE
Author:         Alistair Bayley, Oleg Kiselyov, Pavel Ryzhov
Copyright:      2003-2009, Alistair Bayley, Oleg Kiselyov, 2013, Pavel Ryzhov
Maintainer:     paul@paulrz.cz
Stability:      experimental
Homepage:       https://github.com/paulrzcz/takusen-oracle.git
Package-url:    https://github.com/paulrzcz/takusen-oracle.git
Category:       Database
Build-type:     Custom
Cabal-Version:  >= 1.16
Synopsis:       Database library with left-fold interface for Oracle.
Description:   
    Takusen-Oracle is a Oracle access library. Like HSQL and HDBC, we support
    arbitrary SQL statements (currently strings, extensible to anything
    that can be converted to a string).

Extra-tmp-files: 
      Database/Oracle/OCIFunctions_stub.c
      Database/Oracle/OCIFunctions_stub.h


Description: Oracle OCI backend

Flag buildtests
  Description: Build test executables
  Default:     False


Executable takusen_tests
  Default-Language: Haskell2010
  If !flag(buildtests)
    Buildable: False
  else
    -- If we want to build test exe, then it needs Takusen installed.
    Build-Depends:  Takusen
  Main-Is: Main.lhs
  Other-modules: 
        Database.Enumerator
      , Database.InternalEnumerator
      , Database.Util
      , Database.Test.Enumerator
      , Database.Test.Util
      , Database.Test.Performance
      , Database.Oracle.Enumerator
      , Database.Oracle.OCIConstants
      , Database.Oracle.OCIFunctions
      , Database.Oracle.Test.Enumerator
      , Database.Oracle.Test.OCIFunctions
      , Control.Exception.MonadIO
      , Control.Exception.Extensible
      , Foreign.C.UTF8
      , Foreign.C.Test.UTF8
      , Test.MiniUnit
  Build-Depends:  base          >= 4.6   && < 5
                , mtl
                , time
                , QuickCheck    ==2.*
                , random
  Extensions: CPP DeriveDataTypeable ScopedTypeVariables

Executable miniunit_tests
  Default-Language: Haskell2010
  If !flag(buildtests)
    Buildable: False
  Main-Is: Test/Main.hs
  Other-modules: 
      Control.Exception.MonadIO
    , Control.Exception.Extensible
    , Test.MiniUnit
    , Test.MiniUnitTest
  Build-Depends:  base          >= 4.6   && < 5
                , mtl
  Other-Extensions: CPP DeriveDataTypeable ScopedTypeVariables

Library
  Default-Language: Haskell2010
  Exposed-modules:
        Database.Enumerator
      , Database.Util
      , Control.Exception.MonadIO
      , Foreign.C.UTF8

  Exposed-modules:
        Database.Oracle.Enumerator
      , Database.Oracle.OCIConstants
      , Database.Oracle.OCIFunctions
  Build-Tools: sqlplus
  If os(windows)
    Extra-Libraries: oci
  Else
    Extra-Libraries: clntsh

  Build-Depends:  base
                , mtl
                , time
  Other-Extensions: CPP DeriveDataTypeable
  Other-modules: 
        Database.InternalEnumerator
      , Control.Exception.Extensible
      -- Modules in Other-modules are passed to Haddock with --hide=<module-name>.
  Ghc-Prof-Options: -prof -auto-all