Name:           takusen-example
Version:        0.0.1
License:        BSD3
License-file:   LICENSE
Author:         Pavel Ryzhov
Copyright:      2013, Pavel Ryzhov, Velrina s.r.o.
Maintainer:     paul@paulrz.cz
Stability:      experimental
Homepage:       https://github.com/paulrzcz/takusen-oracle.git
Package-url:    https://github.com/paulrzcz/takusen-oracle.git
Category:       Database
Build-type:     Custom
Cabal-Version:  >= 1.16
Synopsis:       Database library with left-fold interface for Oracle.
Description:   
    This is an example of takusen-oracle usage.

source-repository this
    type:       git
    location:   https://github.com/paulrzcz/takusen-oracle.git
    tag:        0.9.0 

Executable takusen-example
  Default-Language: Haskell2010
  Main-Is: Main.hs
  Build-Depends:  base          >= 4.5   && < 5
                , mtl
                , time
                , old-time
                , QuickCheck    ==2.*
                , random
                , takusen-oracle
  Extensions: DeriveDataTypeable ScopedTypeVariables